various changes at heroine as sylph - advancement faster at melee combat decreases damage by 3 points and require 2 advancements better at melee combat - removed 1 advancement better at melee combat and faster with spiderwebs - advancement faster with spiderwebs decreases damage by 2 points and require 1 advancement better with spiderwebs - first advancement causing more havoc with faerie fire no longer adds one attack - second advancement causing more havoc with faerie fire no longer increases damage by 1 point, also now is called faster with faerie fire - (originally) first advancement faster with faerie fire decreases damage by 1 point

--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -213,26 +213,12 @@
 		[/frame]
 	[/attack_anim]
   [advancement]
-    max_times=1
+    max_times=7
     id=melee
-    description= _ "faster at melee combat"
-    image="attacks/touch-faerie.png"
-    strict_amla=yes
-    require_amla=""
-	  [effect]
-		  apply_to=attack
-		  name=faerie touch
-		  increase_attacks=1
-	  [/effect]
-	  {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=8
-    id=melee2
     description= _ "better at melee combat"
     image="attacks/touch-faerie.png"
     strict_amla=yes
-    require_amla="melee"
+    require_amla=""
 	  [effect]
 		  apply_to=attack
 		  name=faerie touch
@@ -241,30 +227,46 @@
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
-    max_times=2
+    max_times=1
+    id=melee2
+    description= _ "faster at melee combat"
+    image="attacks/touch-faerie.png"
+    strict_amla=yes
+    require_amla="melee,melee"
+	  [effect]
+		  apply_to=attack
+		  name=faerie touch
+		  increase_attacks=1
+		  increase_damage=-3
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=7
     id=web
-    description= _ "faster with spiderwebs"
+    description= _ "better with spiderwebs"
     image="attacks/web.png"
     strict_amla=yes
     require_amla=""
 	  [effect]
 		  apply_to=attack
 		  name=gossamer
-		  increase_attacks=1
+		  increase_damage=1
 	  [/effect]
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
-    max_times=8
+    max_times=1
     id=web2
-    description= _ "better with spiderwebs"
+    description= _ "faster with spiderwebs"
     image="attacks/web.png"
     strict_amla=yes
     require_amla="web"
 	  [effect]
 		  apply_to=attack
 		  name=gossamer
-		  increase_damage=1
+		  increase_attacks=1
+		  increase_damage=-2
 	  [/effect]
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
@@ -280,7 +282,6 @@
 		  apply_to=attack
 		  name=faerie fire
 		  increase_damage=1
-		  increase_attacks=1
 	  [/effect]
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
@@ -288,15 +289,15 @@
     max_times=1
     always_display=yes
     id=faerie2
-    description= _ "causing more havoc with faerie fire"
+    description= _ "faster with faerie fire"
     image=attacks/faerie-fire.png
     strict_amla=yes
     require_amla="faerie1"
 	  [effect]
 		  apply_to=attack
 		  name=faerie fire
-		  increase_damage=-1
 		  increase_attacks=1
+		  increase_damage=-1
 	  [/effect]
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
@@ -327,6 +328,7 @@
 		  apply_to=attack
 		  name=faerie fire
 		  increase_attacks=1
+		  increase_damage=-1
 	  [/effect]
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
