corrected a typo in description of the campaign loyal elves in scenario 2 are created into a variable now, after their unstoring we redraw the screen fixed indenting in utils/misc.cfg

--- a/_main.cfg
+++ b/_main.cfg
@@ -11,7 +11,7 @@
   abbrev= _ "TM"
   define=The_Memories
   first_scenario="01_The_Begining"
-  description=_"Defeat all who dares to defile your forest but at first you must regain your own memories."
+  description=_"Defeat all who dare to defile your forest but at first you must regain your own memories."
 [/campaign]
 
 #ifdef The_Memories
