--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -12,22 +12,19 @@
     overlays="misc/loyal-icon.png"
     x,y={X},{Y}
     animate=no
+    to_variable=temp_store
     [variables]
       to_recall=yes
     [/variables]
   [/unit]
-  [store_unit]
-    [filter]
-      id={ID}
-    [/filter]
-    variable=temp_store
-  [/store_unit]
   {VARIABLE temp_store.advances_to {ADVANCES_TO}}
   [unstore_unit]
     variable=temp_store
     find_vacant=no
   [/unstore_unit]
   {CLEAR_VARIABLE temp_store}
+  [redraw]
+  [/redraw]
 #enddef
 
 #define WILD_WOLF X Y
