--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -63,7 +63,7 @@
     [/filter]
     [message]
       speaker=unit
-      message=_""
+      message=_" "
     [/message]
     {DEFEAT}
   [/event]
@@ -91,7 +91,7 @@
     [/filter]
     [message]
       speaker=unit
-      message=_""
+      message=_" "
     [/message]
     {DEFEAT}
   [/event]
@@ -139,7 +139,7 @@
     [/filter]
     [message]
       speaker=Elrilinde
-      message=_"Farewell $unit.name. I will miss you."
+      message=_"Farewell, $unit.name. I will miss you."
     [/message]
   [/event]
 #enddef
