first scenario - the heroine is looking to the other elves now - Tendriel moves to a better location now - improved first sentence fixed heroine's id in macro ELUSIVE_HERO (I forgot to do it when changing her id)

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -16,13 +16,14 @@
 		team_name=elves
     user_team_name= _ "Elves"
     shroud=yes
-
+    
 		type=Elrilinde Elvish Sorceress # only sprite is different, i like the older one more
 		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
 		unrenamable=true
 		random_traits=yes
+    facing=se
     
     recruit=
 		{FLAG_VARIANT wood-elvish}
@@ -112,11 +113,11 @@
   
   [event]
 		name=start
-    {MOVE_UNIT id=Tendriel 8 4}
+    {MOVE_UNIT id=Tendriel 9 4}
     # introduction
 		[message]
 			speaker=Tendriel
-			message=_"Humans from a near city are attacking us, milady."
+			message=_"I am sorry to disturb you, milady but humans from a near city are attacking us. We need your help to fend off their attack."
 		[/message]
     [message]
 			speaker=Elrilinde
