--- a/utils/misc.cfg
+++ b/utils/misc.cfg
@@ -28,7 +28,7 @@
 
 # i do not want her to be hit so often at the begining
 #define ELUSIVE_HERO
-  {FORCE_CHANCE_TO_HIT side=2,3,4,5 id=Elrilindë 10 ()}
+  {FORCE_CHANCE_TO_HIT side=2,3,4,5 id=Elrilinde 10 ()}
 #enddef
 
 #define SIDE_NO_ECONOMY
