campaign define symbol is in capital letters now

--- a/_main.cfg
+++ b/_main.cfg
@@ -9,12 +9,12 @@
   image="data/add-ons/The_Memories/images/campaign_image.png"
   name= _ "The Memories"
   abbrev= _ "TM"
-  define=The_Memories
+  define=THE_MEMORIES
   first_scenario="01_The_Begining"
   description=_"Defeat all who dare to defile your forest but at first you must regain your own memories."
 [/campaign]
 
-#ifdef The_Memories
+#ifdef THE_MEMORIES
 
 [binary_path]
   path="data/add-ons/The_Memories"
