finally uploaded improved map for first scenario improved a bit final dialogue in first scenario sylph in scenario 5 is always unstored at the right place now

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -254,11 +254,11 @@
 		[/message]
     [message]
 			speaker=Elrilinde
-			message=_"Yes and I do not know how to regain my memories."
+			message=_"Yes and I have not the slightest idea how to regain my memories."
 		[/message]
     [message]
 			speaker=unit
-			message=_"I am sorry but even our wizard can't help you."
+			message=_"I am sorry but even our wizard can't help you with such an affair."
 		[/message]
     [message]
 			speaker=Tendriel
