--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -156,7 +156,7 @@
     [/message]
     [message]
       speaker=sylph
-      message=_"I am sorry but I have my own troubles. These fools want to defile this forest. If you help me with them then I can help you."
+      message=_"I'm sorry but I have my own troubles. These fools want to defile this forest. If you help me with them then I can help you."
     [/message]
     [message]
       speaker=Elrilinde
