changed description of the campaign and the one for add-ons server

--- a/_main.cfg
+++ b/_main.cfg
@@ -11,7 +11,9 @@
   abbrev= _ "TM"
   define=THE_MEMORIES
   first_scenario="01_The_Begining"
-  description=_"Defeat all who dare to defile your forest but at first you must regain your own memories."
+  description=_"You are a powerful sorceress and defender of this forest. At least, these elves say it. You have no memories about your life, abilities and the place what you are at. Begin your quest to regain them right now. But will you be able to live with them?
+  
+(Novice level)"
 [/campaign]
 
 #ifdef THE_MEMORIES
