--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -220,7 +220,7 @@
     [/message]
     [message]
       speaker=spirit2
-      message=_"Only someone with pure heart is allowed to touch it."
+      message=_"Only an elf with pure heart is allowed to <i>touch</i> it."
     [/message]
     [message]
       speaker=spirit3
