improved maps for scenarios 3 a 4d scenario 4d - increased priority of heroine for the ai - corrected heroine's name in defeat conditions - added number of spirits to objectives - added time over as a defeat condition in objectives

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -98,7 +98,7 @@
         [criteria]
           id=Elrilinde # they do not care about anyone else
         [/criteria]
-        value=50
+        value=100
       [/goal]
     [/ai]
 	[/side]
@@ -108,13 +108,14 @@
 		[objectives]
 			side=1
 			[objective]
-				description= _ "Banish spirits of the forest"
+				description= _ "Banish five spirits of the forest"
 				condition=win
 			[/objective]
 			[objective]
-		    description= _ "Death of Elrilinde"
+		    description= _ "Death of Elrilindë"
 		    condition=lose
 	    [/objective]
+      {TURNS_RUN_OUT}
       [note]
         description = _ "Only the heroine can hit the spirits and only with ranged attack."
       [/note]
