added macro ENDLEVEL_SILENT_CONTINUE, it is used in all scenarios except for Back with Sylph created skeleton for scenario 7

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -304,12 +304,7 @@
 		  [/filter]
 		  variable=human_leader_store
 		[/store_unit]
-    [endlevel]
-      result=victory
-      bonus=no
-      carryover_report=no
-      carryover_percentage=0
-    [/endlevel]
+    {ENDLEVEL_SILENT_CONTINUE}
   [/event]
   
   # easter egg
