--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -142,12 +142,7 @@
 			speaker=Elrilinde
 			message=_"I can feel very strong magic here. It may be the Sylph."
 		[/message]
-    [endlevel]
-      result=victory
-      bonus=no
-      carryover_report=no
-      carryover_percentage=0
-    [/endlevel]
+    {ENDLEVEL_SILENT_CONTINUE}
   [/event]
   
   [event]
