--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -242,12 +242,7 @@
       kill=no
     [/store_unit]
     {VARIABLE items_collected 0}
-    [endlevel]
-      result=victory
-      bonus=no
-      carryover_report=no
-      carryover_percentage=0
-    [/endlevel]
+    {ENDLEVEL_SILENT_CONTINUE}
   [/event]
   
   [event]
