--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -178,12 +178,7 @@
       message=_"Very well. Let us take the fruit and go back to the Sylph."
     [/message]
     {VARIABLE_OP items_collected add 1}
-    [endlevel]
-      result=victory
-      bonus=no
-      carryover_report=no
-      carryover_percentage=0
-    [/endlevel]
+    {ENDLEVEL_SILENT_CONTINUE}
   [/event]
   
   [event]
