--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -233,12 +233,7 @@
           speaker=Elrilinde
           message=_"Ok. Let us go back to the Sylph."
         [/message]
-        [endlevel]
-          result=victory
-          bonus=no
-          carryover_report=no
-          carryover_percentage=0
-        [/endlevel]
+        {ENDLEVEL_SILENT_CONTINUE}
       [/then]
     [/if]
     [if]
@@ -265,12 +260,7 @@
         [fire_event]
           name=free_druid
         [/fire_event]
-        [endlevel]
-          result=victory
-          bonus=no
-          carryover_report=no
-          carryover_percentage=0
-        [/endlevel]
+        {ENDLEVEL_SILENT_CONTINUE}
       [/then]
     [/if]
   [/event]
@@ -316,12 +306,7 @@
           speaker=Elrilinde
           message=_"Ok. Let us go back to the Sylph."
         [/message]
-        [endlevel]
-          result=victory
-          bonus=no
-          carryover_report=no
-          carryover_percentage=0
-        [/endlevel]
+        {ENDLEVEL_SILENT_CONTINUE}
       [/then]
     [/if]
     [if]
@@ -348,12 +333,7 @@
         [fire_event]
           name=free_druid
         [/fire_event]
-        [endlevel]
-          result=victory
-          bonus=no
-          carryover_report=no
-          carryover_percentage=0
-        [/endlevel]
+        {ENDLEVEL_SILENT_CONTINUE}
       [/then]
     [/if]
     {VARIABLE vase_taken yes}
