--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -328,12 +328,7 @@
       speaker=Elrilinde
       message=_"Let us go back to Sylph."
     [/message]
-    [endlevel]
-      result=victory
-      bonus=no
-      carryover_report=no
-      carryover_percentage=0
-    [/endlevel]
+    {ENDLEVEL_SILENT_CONTINUE}
   [/event]
   
   [event]
