--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -302,12 +302,7 @@
       variable=servant_store
       kill=yes
     [/store_unit]
-    [endlevel]
-      result=victory
-      bonus=no
-      carryover_report=no
-      carryover_percentage=0
-    [/endlevel]
+    {ENDLEVEL_SILENT_CONTINUE}
   [/event]
   
   [event]
