--- a/utils/misc.cfg
+++ b/utils/misc.cfg
@@ -64,3 +64,12 @@
   [/recall]
   {CLEAR_VARIABLE units_to_recall}
 #enddef
+
+#define ENDLEVEL_SILENT_CONTINUE
+  [endlevel]
+    result=victory
+    bonus=no
+    carryover_report=no
+    carryover_percentage=0
+  [/endlevel]
+#enddef
