scenario 7 - done advancing the heroine due to the ritual:   if she was at level 2, advance her to level 3 and set her next advancement   if she was at level 3 and had at least 100 experiences, advance her to level 4   if she was at level 3 but had less than 100 experiences, set her next advancement and give her 50 experiences

--- a/scenarios/07_The_Memories.cfg
+++ b/scenarios/07_The_Memories.cfg
@@ -77,6 +77,46 @@
   
   [event]
     name=start
+    [store_unit]
+      [filter]
+        id=Elrilinde
+      [/filter]
+      variable=temp_store
+    [/store_unit]
+    [if]
+      [variable]
+        name=temp_store.level
+        equals=2
+      [/variable]
+      [then]
+        {ADVANCE_UNIT id=Elrilinde (Elrilinde Elvish Enchantress)}
+        {VARIABLE temp_store.advances_to (Elrilinde Elvish Sylph)}
+        [unstore_unit]
+          variable=temp_store
+          find_vacant=no
+        [/unstore_unit]
+      [/then]
+      [else]
+        [if]
+          [variable]
+            name=temp_store.experience
+            greater_than_equal_to=100
+          [/variable]
+          [then]
+            {ADVANCE_UNIT id=Elrilinde (Elrilinde Elvish Sylph)}
+          [/then]
+          [else]
+            {VARIABLE temp_store.advances_to (Elrilinde Elvish Sylph)}
+            {VARIABLE_OP temp_store.experience add 50}
+            [unstore_unit]
+              variable=temp_store
+              find_vacant=no
+            [/unstore_unit]
+          [/else]
+        [/if]
+      [/else]
+    [/if]
+    {CLEAR_VARIABLE temp_store}
     {ENDLEVEL_SILENT_CONTINUE}
   [/event]
 [/scenario]
