improved starting dialogue in scenario 1

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -113,7 +113,7 @@
     # introduction
 		[message]
 			speaker=Tendriel
-			message=_"I am sorry to disturb you, milady but humans from a near city are attacking us. We need your help to fend off their attack."
+			message=_"I am sorry to disturb you, milady but humans from a near city are attacking us. We need your help to fend off their completely suprising attack. I wonder what is wrong with them, they did not attack us since ... well, actually I have never seen them doing it."
 		[/message]
     [message]
 			speaker=Elrilinde
@@ -125,11 +125,11 @@
 		[/message]
     [message]
 			speaker=Elrilinde
-			message=_"I cannot remember anything. But for an uknown reason I trust you. Tell me, who are you?"
+			message=_"I cannot remember anything. I can only see that I am an elven maiden. I feel some magic in me though I cannot tell its nature. But for an uknown reason I trust you. Tell me, who are you?"
 		[/message]
     [message]
 			speaker=Tendriel
-			message=_"My name is Tendriel, milady. I lead our people when we are attacked."
+			message=_"My name is Tendriel, milady. I lead our people when we are attacked. It does not happen so often though, we do not have many enemies."
 		[/message]
     [message]
 			speaker=Tendriel
@@ -137,7 +137,7 @@
 		[/message]
     [message]
 			speaker=Elrilinde
-			message=_"I would like to help you but I know nothing about my abilities."
+			message=_"I would really like to help you but I know nothing about my abilities. I have no idea what I am capable of."
 		[/message]
     [message]
 			speaker=Tendriel
@@ -184,6 +184,24 @@
 			speaker=Elrilinde
 			message=_"I can see these humans."
 		[/message]
+  [/event]
+  
+  [event]
+    name=attack
+    [filter]
+      id=Elrilinde
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"Get away from me, human or I will harm. I do not want to do it but you are giving me no choice."
+    [/message]
+    [message]
+      message=_"Heh, I don't think so, maiden. You don't seem to know what to do with that staff in your hands."
+    [/message]
+    [message]
+      speaker=unit
+      message=_"Give me just a few moments and I will remember it."
+    [/message]
   [/event]
   
   # victory
