added info about number of playable scenarios to description of the campaign added missing speaker for a message in first scenario fixed heroine's id in guide's death speech

--- a/_main.cfg
+++ b/_main.cfg
@@ -13,7 +13,7 @@
   first_scenario="01_The_Begining"
   description=_"You are a powerful sorceress and defender of this forest. At least, these elves say it. You have no memories about your life, abilities and the place what you are at. Begin your quest to regain them right now. But will you be able to live with them?
   
-(Novice level)"
+(Novice level, 8 playable scenarios)"
 [/campaign]
 
 #ifdef THE_MEMORIES
