--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -104,7 +104,7 @@
       id=guide
     [/filter]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"No! I will remember nothing without her."
     [/message]
     {DEFEAT}
