--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -196,6 +196,7 @@
       message=_"Get away from me, human or I will harm. I do not want to do it but you are giving me no choice."
     [/message]
     [message]
+      speaker=second_unit
       message=_"Heh, I don't think so, maiden. You don't seem to know what to do with that staff in your hands."
     [/message]
     [message]
