written some dialogues in scenario 7

--- a/scenarios/07_The_Memories.cfg
+++ b/scenarios/07_The_Memories.cfg
@@ -77,6 +77,19 @@
   
   [event]
     name=start
+    [message]
+      speaker=sylph
+      message=_"Everything is prepared. I can start it, I just need you to come next to me."
+    [/message]
+    [message]
+      speaker=Elrilinde
+      message=_"Excellent. I am coming to you."
+    [/message]
+    {MOVE_UNIT id=Elrilinde 15 11}
+    [message]
+      speaker=sylph
+      message=_"Good. But are you really ready for it? By undergoing this ritual, you will get back all your memories. Not only the good or bad ones, every single one of them will be in your mind after we're done, you'll fell them all at once. I think this would too strong for pretty much everyone. So do you really wish to begin with it?"
+    [/message]
     [store_unit]
       [filter]
         id=Elrilinde
