added credits got rid of mainline-strings.cfg

--- a/_main.cfg
+++ b/_main.cfg
@@ -14,6 +14,12 @@
   description=_"You are a powerful sorceress and defender of this forest. At least, these elves say it. You have no memories about your life, abilities and the place what you are at. Begin your quest to regain them right now. But will you be able to live with them?
   
 (Novice level, 8 playable scenarios)"
+  [about]
+    title = _ "Campaign Design"
+    [entry]
+      name="James_The_Invisible"
+    [/entry]
+  [/about]
 [/campaign]
 
 #ifdef THE_MEMORIES
@@ -22,7 +28,6 @@
   path="data/add-ons/The_Memories"
 [/binary_path]
 
-{~add-ons/The_Memories/mainline-strings.cfg}
 {~add-ons/The_Memories/utils}
 {~add-ons/The_Memories/scenarios}
 
