--- a/units/Enchantress.cfg
+++ b/units/Enchantress.cfg
@@ -1,8 +1,8 @@
-#textdomain wesnoth-The_Memories
+#textdomain wesnoth-units
 
 [unit_type]
   id=Elrilinde Elvish Enchantress
-  name={S_ELVISH_ENCHANTRESS}
+  name= _"female^Elvish Enchantress"
   race=elf
   gender=female
   image="units/oldelvish-enchantress.png"
@@ -17,7 +17,7 @@
   advances_to=null
   cost=55
   usage=mixed fighter
-  {ELVISH_ENCHANTRESS_DESCRIPTION}
+  description= _"The magic of the elves is wholly unlike that of humanity, so much so that humans are almost universally incapable of understanding it, let alone using it. Likewise, those who are masters of it are equally enigmatic; though it can be said that they are revered by their people, very little can be said about their actual function or purpose within that society."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_ARCANE}
   die_sound={SOUND_LIST:ELF_FEMALE_HIT}
   [portrait]
     size=400
@@ -36,7 +36,7 @@
   [/resistance]
   [attack]
     name=staff
-    description={S_STAFF}
+    description= _"staff"
     type=impact
     range=melee
     damage=6
@@ -46,7 +46,7 @@
   [/attack]
   [attack]
     name=entangle
-    description={S_ENTANGLE}
+    description= _"entangle"
     type=impact
     [specials]
       {WEAPON_SPECIAL_SLOW}
@@ -57,7 +57,7 @@
   [/attack]
   [attack]
     name=faerie fire
-    description={S_FAERIE_FIRE}
+    description= _"faerie fire"
     type=arcane
     damage=9
     number=4
