--- a/units/Sorceress.cfg
+++ b/units/Sorceress.cfg
@@ -1,8 +1,8 @@
-#textdomain wesnoth-The_Memories
+#textdomain wesnoth-units
 
 [unit_type]
 	id=Elrilinde Elvish Sorceress
-	name={S_ELVISH_SORCERESS}
+	name= _"female^Elvish Sorceress"
 	race=elf
 	gender=female
 	image="units/oldelvish-sorceress.png"
@@ -17,7 +17,9 @@
 	advances_to=Elrilinde Elvish Enchantress
 	cost=34
 	usage=mixed fighter
-  {ELVISH_SORCERESS_DESCRIPTION}
+  description= _"The world of faerie is far more potent than the corporeal world. Simply bringing some of this world into our own can have violent results. This is well-understood by the elves, although rarely used with malicious intent; doing so is no easy task, and is a very ill-regarded use of their strength.
+
+Those able to do so are roughly titled as ‘sorceresses’ by other races; and certainly are capable of acting the part."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_ARCANE}
   die_sound={SOUND_LIST:ELF_FEMALE_HIT}
   [portrait]
     size=400
@@ -36,7 +38,7 @@
   [/resistance]
 	[attack]
 		name=staff
-    description={S_STAFF}
+    description= _"staff"
 		type=impact
 		range=melee
 		damage=4
@@ -46,7 +48,7 @@
 	[/attack]
 	[attack]
 		name=entangle
-    description={S_ENTANGLE}
+    description= _"entangle"
 		type=impact
 		[specials]
 			{WEAPON_SPECIAL_SLOW}
@@ -57,7 +59,7 @@
 	[/attack]
 	[attack]
 		name=faerie fire
-    description={S_FAERIE_FIRE}
+    description= _"faerie fire"
 		type=arcane
 		damage=7
 		number=4
