--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -1,8 +1,8 @@
-#textdomain wesnoth-The_Memories
+#textdomain wesnoth-units
 
 [unit_type]
 	id=Elrilinde Elvish Sylph
-	name={S_ELVISH_SYLPH}
+	name= _"female^Elvish Sylph"
 	race=elf
 	gender=female
 	image="units/oldelvish-sylph.png"
@@ -17,14 +17,14 @@
 	advances_to=null
 	cost=67
 	usage=mixed fighter
-	{ELVISH_SYLPH_DESCRIPTION}
+	 description=_"Rarely seen, the sage-like Sylphs are masters of both their faerie and mundane natures. They are possessed of wondrous, and sometimes terrifying powers. Legends concerning these have given other races a healthy fear of the elves."+{SPECIAL_NOTES}+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_ARCANE}
 	die_sound={SOUND_LIST:ELF_FEMALE_HIT}
 	[resistance]
 		arcane=80
 	[/resistance]
 	[attack]
 		name=faerie touch
-    description={S_FAERIE_TOUCH}
+    description= _"faerie touch"
 		icon=attacks/touch-faerie.png
 		type=impact
 		[specials]
@@ -37,7 +37,7 @@
 	[/attack]
 	[attack]
 		name=gossamer
-    description={S_GOSSAMER}
+    description= _"gossamer"
 		type=impact
 		[specials]
 			{WEAPON_SPECIAL_SLOW}
@@ -49,7 +49,7 @@
 	[/attack]
 	[attack]
 		name=faerie fire
-    description={S_FAERIE_FIRE}
+    description= _"faerie fire"
 		type=arcane
 		[specials]
 			{WEAPON_SPECIAL_MAGICAL}
@@ -212,6 +212,7 @@
 			halo_x,halo_y=0,-28
 		[/frame]
 	[/attack_anim]
+#textdomain wesnoth-The_Memories
   [advancement]
     max_times=7
     id=melee
