improved some dialogues in first 3 scenarios

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -213,7 +213,7 @@
     [/filter]
     [message]
       speaker=unit
-      message=_"I surrender."
+      message=_"Stop it ... I surrender."
     [/message]
     [modify_side]
       side=3
@@ -261,7 +261,7 @@
     [/message]
     [message]
 			speaker=Tendriel
-			message=_"We will make her pay later. Alas she may have something to do with your amnesia, milady."
+			message=_"We will make her pay later. Alas I fear that she may have something to do with your amnesia, milady."
 		[/message]
     [message]
 			speaker=unit
@@ -281,7 +281,7 @@
 		[/message]
     [message]
 			speaker=unit
-			message=_"It may be a fairy tale only, an elf."
+			message=_"It may be a fairy tale only, elf."
 		[/message]
     [message]
 			speaker=Tendriel
@@ -293,7 +293,15 @@
 		[/message]
     [message]
 			speaker=Tendriel
-			message=_"In the west, in the heart itself of this forest but there are a lot of wild beasts. I will send some our people with you, milady."
+			message=_"In the west, in the heart itself of this forest but there are a lot of wild beasts. I will send some our people with you, milady. I do not expect anyone else to attack us in near future."
+		[/message]
+    [message]
+      speaker=Elrilinde
+      message=_"Thank you ... I suppose that I should set out right now. So farewell."
+    [/message]
+    [message]
+			speaker=Tendriel
+			message=_"Have a safe journey."
 		[/message]
     # guide for hero, next soldiers join her at the start of next scenario
     [unit]
