--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -118,15 +118,15 @@
     [/message]
     [message]
       speaker=guide
-      message=_"I am not sure, milady. By the tales she could live in the west but nobody of our people saw her for decades."
+      message=_"I am not sure, milady. By the tales she could live in the west but nobody of our people saw her for decades nor we have heard about her. I wonder if she is still alive ..."
     [/message]
     [message]
       speaker=Elrilinde
-      message=_"Ok let us go to the west."
+      message=_"She probably is ... she must be. Well, we will find it out soon. Let us head to the west."
     [/message]
     [message]
       speaker=guide
-      message=_"There are some wild animals here but you do not need to worry, milady. We will protect you."
+      message=_"As you say. Well, I have been often to this place and I must warn you that there are some wild animals here but you do not need to worry, milady. We will protect you if they dare to attack us."
     [/message]
 	[/event]
   
