--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -140,15 +140,15 @@
     # starting dialogue
     [message]
       speaker=Elrilinde
-      message=_"I can see the Sylph."
+      message=_"I can see someone. May it be the Sylph?"
     [/message]
     [message]
       speaker=guide
-      message=_"I am so excited. No elf saw her for decades."
+      message=_"Yes, it is her ... I am so excited. No elf saw her for decades."
     [/message]
     [message]
       speaker=sylph
-      message=_"Elves? I haven't had any visitors for a long time. Who are you?"
+      message=_"Elves? I haven't had any visitors for a long time. Who are you and what are you doing here?"
     [/message]
     [message]
       speaker=Elrilinde
