improved a bit the final dialogue in first scenario

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -249,7 +249,7 @@
 		[/message]
     [message]
       speaker=unit
-      message=_"She didn't introduce herself to us. She hided her face even. I think she was a human but she is evil."
+      message=_"She didn't introduce herself to us. She hided her face even. I think she was a human but she is evil. I actually think she used some kind of spell on me."
     [/message]
     [message]
 			speaker=Tendriel
@@ -257,11 +257,11 @@
 		[/message]
     [message]
       speaker=unit
-      message=_"She could be ... Damn it! She left a few minutes ago!"
+      message=_"She could be right ... Damn it! She left a few minutes ago!"
     [/message]
     [message]
 			speaker=Tendriel
-			message=_"We will make her pay later. Alas I fear that she may have something to do with your amnesia, milady."
+			message=_"We will make her pay later. Alas I fear that she may have something to do with your amnesia, milady. If she used some mind control spell maybe she could take you your memories as well."
 		[/message]
     [message]
 			speaker=unit
