added path for the textdomain

--- a/_main.cfg
+++ b/_main.cfg
@@ -1,6 +1,7 @@
 #textdomain wesnoth-The_Memories
 [textdomain]
-    name=wesnoth-The_Memories
+  name=wesnoth-The_Memories
+	path="data/add-ons/The_Memories/translations"
 [/textdomain]
 
 [campaign]
