added magic comments for wmllint (# wmllint: recognize x)

--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -98,6 +98,7 @@
   
   [event]
 		name=start
+    # wmllint: recognize guide
     # recall the guide
     {RECALL_HEROES}
     # and give some loyal elves
