--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -65,6 +65,7 @@
   
   [event]
     name=start
+    # wmllint: recognize guide
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # place monsters
