--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -105,6 +105,7 @@
     
   [event]
     name=prestart
+    # wmllint: recognize guide
 		[objectives]
 			side=1
 			[objective]
@@ -202,6 +203,11 @@
       message=_"But I have to continue at my own now. Wait for me here."
     [/message]
     {MOVE_UNIT id=Elrilinde 17 17}
+    # wmllint: recognize spirit1
+    # wmllint: recognize spirit2
+    # wmllint: recognize spirit3
+    # wmllint: recognize spirit4
+    # wmllint: recognize spirit5
     {SPIRIT 11 16 spirit1}
     {SPIRIT 12 14 spirit2}
     {SPIRIT 15 14 spirit3}
