--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -77,6 +77,7 @@
   
   [event]
     name=start
+    # wmllint: recognize guide
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # starting dialog
