--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -107,6 +107,8 @@
   
   [event]
     name=start
+    # wmllint: recognize guide
+    # wmllint: recognize druid
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # starting dialog
