--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -135,6 +135,7 @@
   
   [event]
 		name=start
+    # wmllint: recognize guide
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # starting dialogue
