--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -87,6 +87,7 @@
   
   [event]
     name=start
+    # wmllint: recognize guide
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # place some wild animals
