added more comments for wmllint (now it does not print any errors/warnings) corrected some typos in scenarios 1,3 and 6

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -113,7 +113,7 @@
     # introduction
 		[message]
 			speaker=Tendriel
-			message=_"I am sorry to disturb you, milady but humans from a near city are attacking us. We need your help to fend off their completely suprising attack. I wonder what is wrong with them, they did not attack us since ... well, actually I have never seen them doing it."
+			message=_"I am sorry to disturb you, milady but humans from a near city are attacking us. We need your help to fend off their completely surprising attack. I wonder what is wrong with them, they did not attack us since ... well, actually I have never seen them doing it."
 		[/message]
     [message]
 			speaker=Elrilinde
@@ -125,7 +125,7 @@
 		[/message]
     [message]
 			speaker=Elrilinde
-			message=_"I cannot remember anything. I can only see that I am an elven maiden. I feel some magic in me though I cannot tell its nature. But for an uknown reason I trust you. Tell me, who are you?"
+			message=_"I cannot remember anything. I can only see that I am an elven maiden. I feel some magic in me though I cannot tell its nature. But for an unknown reason I trust you. Tell me, who are you?"
 		[/message]
     [message]
 			speaker=Tendriel
