--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -216,7 +216,7 @@
     [/message]
     [message]
       speaker=sylph
-      message=_"Only a very powerfull magician can do a such thing. And only someone stronger can break it."
+      message=_"Only a very powerful magician can do a such thing. And only someone stronger can break it."
     [/message]
     [message]
       speaker=Elrilinde
@@ -224,7 +224,7 @@
     [/message]
     [message]
       speaker=sylph
-      message=_"Of course I can. There is nobody more powerfull here. Alas I need some items for this spell."
+      message=_"Of course I can. There is nobody more powerful here. Alas I need some items for this spell."
     [/message]
     [message]
       speaker=sylph
