--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -1,5 +1,7 @@
 #textdomain wesnoth-The_Memories
 
+# wmllint: local spellings Elvil-Gawien
+
 #define SPIRIT X Y ID
   [unit]
     side=2
@@ -257,7 +259,7 @@
     [/filter]
     [message]
       speaker=unit
-      message=_"You are more powerfull than I expected but it does not matter. The others will get you!"
+      message=_"You are more powerful than I expected but it does not matter. The others will get you!"
     [/message]
   [/event]
   
