--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -1,5 +1,7 @@
 #textdomain wesnoth-The_Memories
 
+# wmllint: local spellings Rhaemyr
+
 #define ENEMY TYPE X Y
   [unit]
     type={TYPE}
@@ -148,6 +150,7 @@
     [message]
       speaker=narrator
       message=_"A few minutes later ..."
+      image= # wmllint: ignore
     [/message]
     [message]
       speaker=guide
@@ -238,6 +241,7 @@
         [message]
           speaker=narrator
           message=_"With their leader dead, his remaining soldiers are not willing to fight. They run for their lives."
+          image= # wmllint: ignore
         [/message]
         [kill]
           side=3
@@ -265,7 +269,7 @@
     [/message]
     [message]
       speaker=Elrilinde
-      message=_"Well a brother of a deffiler wanted to take revenge on you. We stopped him."
+      message=_"Well a brother of a defiler wanted to take revenge on you. We stopped him."
     [/message]
     [message]
       speaker=sylph
