--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -396,7 +396,7 @@
     max_times=5
     always_display=yes
     id=movement2
-    description= _ "more dextrous (2% better defences on all terrains)"
+    description= _ "more dextrous (2% better defenses on all terrains)"
     image=icons/jewelry_butterfly_pin.png
     strict_amla=yes
     require_amla="movement,movement"
