changed [+units] to [units]

--- a/_main.cfg
+++ b/_main.cfg
@@ -32,7 +32,7 @@
 {~add-ons/The_Memories/utils}
 {~add-ons/The_Memories/scenarios}
 
-[+units]
+[units]
   {~add-ons/The_Memories/units}
 [/units]
 
