=disabled linger mode for all scenarios

--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -220,6 +220,7 @@
       result=victory
       bonus=no
       carryover_report=no
+      linger_mode=no
       carryover_percentage=0
       replay_save=no
       next_scenario=$next_scenario
