some fixes/updates for Wesnoth 1.16

--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -6,7 +6,6 @@
   race=elf
   gender=female
   image="units/oldelvish-sylph.png"
-  {MAGENTA_IS_THE_TEAM_COLOR}
   halo=halo/elven/shyde-stationary-halo1.png:150,halo/elven/shyde-stationary-halo2.png:150,halo/elven/shyde-stationary-halo3.png:150,halo/elven/shyde-stationary-halo4.png:150,halo/elven/shyde-stationary-halo5.png:150,halo/elven/shyde-stationary-halo6.png:150
   hitpoints=60
   movement_type=woodlandfloat
@@ -17,7 +16,7 @@
   advances_to=null
   cost=67
   usage=mixed fighter
-  description=_"Rarely seen, the sage-like Sylphs are masters of both their faerie and mundane natures. They are possessed of wondrous, and sometimes terrifying powers. Legends concerning these have given other races a healthy fear of the elves."+{SPECIAL_NOTES}+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_ARCANE}
+  description=_"Rarely seen, the sage-like Sylphs are masters of both their faerie and mundane natures. They are possessed of wondrous, and sometimes terrifying powers. Legends concerning these have given other races a healthy fear of the elves."
   die_sound={SOUND_LIST:ELF_FEMALE_HIT}
   [resistance]
     arcane=80
