--- a/units/Enchantress.cfg
+++ b/units/Enchantress.cfg
@@ -7,7 +7,6 @@
   gender=female
   image="units/oldelvish-enchantress.png"
   profile="portraits/elves/sorceress.png"
-  {MAGENTA_IS_THE_TEAM_COLOR}
   hitpoints=50
   movement_type=woodland
   movement=5
@@ -17,7 +16,7 @@
   advances_to=null
   cost=55
   usage=mixed fighter
-  description= _"The magic of the elves is wholly unlike that of humanity, so much so that humans are almost universally incapable of understanding it, let alone using it. Likewise, those who are masters of it are equally enigmatic; though it can be said that they are revered by their people, very little can be said about their actual function or purpose within that society."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_ARCANE}
+  description= _"The magic of the elves is wholly unlike that of humanity, so much so that humans are almost universally incapable of understanding it, let alone using it. Likewise, those who are masters of it are equally enigmatic; though it can be said that they are revered by their people, very little can be said about their actual function or purpose within that society."
   die_sound={SOUND_LIST:ELF_FEMALE_HIT}
   [resistance]
     arcane=90
@@ -164,7 +163,6 @@
       halo=halo/elven/nature-halo5.png
       halo_x,halo_y=0,-28
     [/frame]
-    {SOUND:SLOW}
     [frame]
       duration=75
       image="units/oldelvish-enchantress-entangle6.png"
