--- a/_main.cfg
+++ b/_main.cfg
@@ -38,4 +38,5 @@
 
 #endif
 
-# wmllint: directory spellings Elrilindë Gioniel Tináclya Tendriel ok dextrous
+# wmllint: directory spellings Elrilindë Gioniel Tináclya Tendriel
+# wmllint: directory spellings elven ok dextrous
