--- a/_main.cfg
+++ b/_main.cfg
@@ -15,7 +15,7 @@
   first_scenario="01_The_Begining"
   description=_"You are a powerful sorceress and defender of this forest. At least, these elves say it. You have no memories about your life, abilities and the place what you are at. Begin your quest to regain them right now. But will you be able to live with them?
   
-(Novice level, 8 playable scenarios)" + "
+(Novice level, 8 playable scenarios, work in progress)" + "
 
 <span color='#888' size='smaller'>" + _ "Version:" + " {./dist/VERSION}" + "</span>"
   [about]
